--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -147,6 +147,7 @@ svg {
 	.hero figure {
 		height: 750px;
 	}
+
 	.hero figure img {
 		height: 750px;
 	}
@@ -285,6 +286,7 @@ svg {
 	max-height: 100%;
 	height: 170px;
 }
+
 .photo img {
 	width: 100%;
 	height: 170px;
@@ -295,6 +297,7 @@ svg {
 	.photo figure {
 		height: 367px;
 	}
+
 	.photo img {
 		height: 367px;
 	}
@@ -348,7 +351,7 @@ svg {
 	}
 }
 
-/* フッター背景画像 */
+/* フッター 背景画像 */
 .footer {
 	position: relative;
 }
@@ -362,8 +365,8 @@ svg {
 	position: absolute;
 	top: 0;
 	bottom: 0;
-	right: 0;
 	left: 0;
+	right: 0;
 	margin: auto;
 }
 
@@ -530,10 +533,15 @@ svg {
 	margin-bottom: 20px;
 }
 
-.posts img {
+.posts figure {
+	max-height: 100%;
 	height: 150px;
+}
+
+.posts img {
 	object-fit: cover;
 }
+
 .posts h3 {
 	margin-top: 10px;
 	font-size: 14px;
@@ -544,7 +552,7 @@ svg {
 		font-size: 16px;
 	}
 
-	.posts img {
+	.posts figure {
 		height: 200px;
 	}
 }
